--- a/welcome/static/css/stylesheet.css
+++ b/welcome/static/css/stylesheet.css
@@ -4,16 +4,16 @@ body {background-color: #ebe9e9;}
 h1 {font-size: 40pt; font-family: colombia; color: #959fa5;}
 hr {border: 2px solid #959fa5;}
 
+* {
+    font-family: Arial;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
 .content-center {
     height: 70vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-.container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
 }
