--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -44,7 +44,7 @@ a {
 }
 
 .card {
-    background-color: lightgray;
+    background-color: gainsboro;
     padding: 1%;
     margin-left: 25px;
     border-radius: 5px;
