--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,10 @@ h1::after {
 
 /* ========= Docs */
 
+.content {
+    margin-top: 10vh;
+}
+
 li {
     margin: 5px;
     padding: 5px;
@@ -41,18 +45,39 @@ li:hover {
     background-color: whitesmoke;
 }
 
+h2.title {
+    color: #303235;
+}
+
+i.title {
+    color: darkcyan;
+}
+
+.docs-link {
+    text-decoration: none;
+    color: #476586;
+}
+
 .right-side {
     display: flex;
     flex-direction: column;
     width: 30vh;
     position: absolute;
     justify-content: left;
-    margin-top: 10vh;
     padding: 1%;
     box-shadow: 0px 0px 0px, 5px 0px 5px lightgray;
+    border-radius: 3px;
 }
 
-.docs-link {
-    text-decoration: none;
-    color: #476586;
+.center {
+    padding: 2%;
+    display: flex;
+    justify-content: center;
+}
+
+@media screen and (max-width: 990px) {
+    .right-side {
+        position: relative;
+        margin-bottom: 5%;
+    }
 }
