--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,11 @@
 .bg-orange {background-color: rgb(228, 203, 180);}
 .bg-blue {background-color: rgb(188, 211, 233);}
+.bg-light {background-color: rgb(238, 238, 238);}
+
+.tag {color: rgb(54, 54, 211);}
+.string {color: rgb(163, 131, 99);}
+.comment {color: rgb(145, 145, 145);}
+.function {color: rgb(20, 170, 20);}
 
 * {
     box-sizing: border-box;
@@ -69,7 +75,7 @@ i.title {
     display: flex;
     flex-direction: column;
     width: 30vh;
-    position: absolute;
+    position: fixed;
     justify-content: left;
     padding: 1%;
     box-shadow: 0px 0px 0px, 5px 0px 5px lightgray;
