--- a/src/resources/css/style.css
+++ b/src/resources/css/style.css
@@ -1,5 +1,60 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Nunito', sans-serif;
 }
+
+h2 {font-family: 'Noto Sans JP', sans-serif;}
+
+.all {
+    display: flex;
+    background-color: #f1f1f1;
+}
+
+.left-side {
+    background-color: #59609c;
+    width: 25%;
+    height: 100vh;
+}
+
+.center {
+    width: 75%;
+}
+
+.contents {
+    padding: 10%;
+}
+
+.content {
+    margin: 5px;
+    padding: 5px;
+    border-radius: 5px;
+    color: white;
+}
+
+.content:hover {
+    cursor: pointer;
+    background-color: #6871a5;
+    color: rgb(245, 245, 245);
+    transition: .2s;
+}
+
+.justify-center {
+    display: flex;
+    justify-content: center;
+}
+
+#default {
+    margin: 5%;
+}
+
+@media screen and (max-width: 890px) {
+    .content {font-size: 20px;}
+    .left-side {width: 40%;}
+}
+
+.primary {color:#525891;}
